RESOLVED FIXED102526
Fix regression causing checkerboard flicker after app wake-up
https://bugs.webkit.org/show_bug.cgi?id=102526
Summary Fix regression causing checkerboard flicker after app wake-up
Adam Treat
Reported 2012-11-16 09:11:20 PST
PR 245027 The webkit patch for 219976 introduced an undesirable behavior change resulting in a regression where there was checkerboard flickering on resuming from an inactive application state. This patch restores the previous behavior and fixes the regression. Reviewed internally by Jakob.
Attachments
Patch (2.49 KB, patch)
2012-11-16 09:12 PST, Adam Treat
no flags
v2 (2.51 KB, patch)
2012-11-16 09:47 PST, Adam Treat
no flags
Adam Treat
Comment 1 2012-11-16 09:12:29 PST
WebKit Review Bot
Comment 2 2012-11-16 09:15:59 PST
Attachment 174705 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/blackberry/Api/BackingStore...." exit_code: 1 Source/WebKit/blackberry/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Treat
Comment 3 2012-11-16 09:47:52 PST
Created attachment 174710 [details] v2 Fixed the changelog
WebKit Review Bot
Comment 4 2012-11-16 11:48:40 PST
Comment on attachment 174710 [details] v2 Clearing flags on attachment: 174710 Committed r134978: <http://trac.webkit.org/changeset/134978>
WebKit Review Bot
Comment 5 2012-11-16 11:48:43 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.