[BlackBerry] Fix regression causing checkerboard flicker after app wake-up https://bugs.webkit.org/show_bug.cgi?id=102526

Patch by Adam Treat <atreat@rim.com> on 2012-11-16
Reviewed by George Staikos.
PR 245027

The webkit patch for 219976 introduced an undesirable behavior change
resulting in a regression where there was checkerboard flickering on
resuming from an inactive application state.  This patch restores the
previous behavior and fixes the regression.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStore::createBackingStoreMemory):
(BlackBerry::WebKit::BackingStore::releaseBackingStoreMemory):

Canonical link: https://commits.webkit.org/120670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134978 268f45cc-cd09-0410-ab3c-d52691b4dbfc